%% sybilSBML Version History

\name{NEWS}
\title{sybilSBML News}
\encoding{UTF-8}

\newcommand{\CRANpkg}{\href{https://cran.r-project.org/package=#1}{\pkg{#1}}}
% ---------------------------------------------------------------------------- %
\section{Changes in version 3.0.4 - 3.0.7 2019-08-02}{
  \itemize{
    \item Maintainer change.
    \item Changes to be able to build package without libSBML FBC and Groups
    plugins. In that case, FBC-constraints and groups in the SBML model will
    be ignored. Added functions \code{isAvailableFBCPlugin} and
    \code{isAvailableGroupsPlugin}.
  }
}
% ---------------------------------------------------------------------------- %
\section{Changes in version 3.0.3 2018-01-02}{
  \itemize{
    \item Added support for the groups plugin of SBML. Now the \code{subSys} 
    (sub system) is read and written from/to the groups plugin. This is necessary 
    for some newer models.
  }
}
% ---------------------------------------------------------------------------- %
\section{Changes in version 3.0.2 2017-10-24}{
  \itemize{
    \item Removed bug when trying to write models with NA in, e.g. \code{met_attr}.
  }
}

% ---------------------------------------------------------------------------- %
\section{Changes in version 3.0.1 2016-12-16}{
  \itemize{
    \item sybilSBML now supports writing of SBML files.
    \item The new FBC additional package for SBML is now fully integrated.
    \item Urls in NEWS file are now in default style.
  }
}

% ---------------------------------------------------------------------------- %
\section{Changes in version 2.0.11 2015-07-03}{
  \itemize{
    \item \code{gprRules}-Slot in \code{modelorg} has changed. Thus 
    \code{readSBMLmod} had to be updated.
  }
}

% ---------------------------------------------------------------------------- %
\section{Changes in version 2.0.11 2015-07-03}{
  \itemize{
    \item \code{gprRules}-Slot in \code{modelorg} has changed. Thus 