@@ -1,82 +1,0 @@
-/* src/config.h.  Generated from config.h.in by configure.  */
-/* src/config.h.in.  Generated from configure.ac by autoheader.  */
-
-/* Define to 1 if you have the `FbcReactionPlugin_getLowerFluxBound' function.
-   */
-#define HAVE_FBCREACTIONPLUGIN_GETLOWERFLUXBOUND 1
-
-/* define if FBC plugin is available */
-#define HAVE_FBC_PLUGIN 1
-
-/* Define to 1 if you have the `GeneProductAssociation_setAssociation'
-   function. */
-#define HAVE_GENEPRODUCTASSOCIATION_SETASSOCIATION 1
-
-/* define if Groups plugin is available */
-#define HAVE_GROUPS_PLUGIN 1
-
-/* Define to 1 if you have the <inttypes.h> header file. */
-#define HAVE_INTTYPES_H 1
-
-/* Define to 1 if you have the `sbml' library (-lsbml). */
-#define HAVE_LIBSBML 1
-
-/* Define to 1 if you have the <memory.h> header file. */
-#define HAVE_MEMORY_H 1
-
-/* Define to 1 if you have the `SBase_getPlugin' function. */
-#define HAVE_SBASE_GETPLUGIN 1
-
-/* Define to 1 if you have the `SBMLExtensionRegistry_getRegisteredPackages'
-   function. */
-#define HAVE_SBMLEXTENSIONREGISTRY_GETREGISTEREDPACKAGES 1
-
-/* Define to 1 if you have the <sbml/packages/fbc/common/FbcExtensionTypes.h>
-   header file. */
-#define HAVE_SBML_PACKAGES_FBC_COMMON_FBCEXTENSIONTYPES_H 1
-
-/* Define to 1 if you have the
-   <sbml/packages/groups/common/GroupsExtensionTypes.h> header file. */
-#define HAVE_SBML_PACKAGES_GROUPS_COMMON_GROUPSEXTENSIONTYPES_H 1
-
-/* Define to 1 if you have the <stdint.h> header file. */
-#define HAVE_STDINT_H 1
-
-/* Define to 1 if you have the <stdlib.h> header file. */
-#define HAVE_STDLIB_H 1
-
-/* Define to 1 if you have the <strings.h> header file. */
-#define HAVE_STRINGS_H 1
-
-/* Define to 1 if you have the <string.h> header file. */
-#define HAVE_STRING_H 1
-
-/* Define to 1 if you have the <sys/stat.h> header file. */
-#define HAVE_SYS_STAT_H 1
-
-/* Define to 1 if you have the <sys/types.h> header file. */
-#define HAVE_SYS_TYPES_H 1
-
-/* Define to 1 if you have the <unistd.h> header file. */
-#define HAVE_UNISTD_H 1
-
-/* Define to the address where bug reports for this package should be sent. */
-#define PACKAGE_BUGREPORT "mayo.roettger@hhu.de"
-
-/* Define to the full name of this package. */
-#define PACKAGE_NAME "sybilSBML"
-
-/* Define to the full name and version of this package. */
-#define PACKAGE_STRING "sybilSBML 3.0.6"
-
-/* Define to the one symbol short name of this package. */
-#define PACKAGE_TARNAME "sybilsbml"
-
-/* Define to the home page for this package. */
-#define PACKAGE_URL ""
-
-/* Define to the version of this package. */
-#define PACKAGE_VERSION "3.0.6"
-
-/* Define to 1 if you have the ANSI C header files. */
-#define STDC_HEADERS 1
