@@ -55,7 +55,7 @@ static const R_CallMethodDef callMethods[] = {
     {"getSBMLCompartList",         (DL_FUNC) &getSBMLCompartList,         1},
     {"getSBMLSpeciesList",         (DL_FUNC) &getSBMLSpeciesList,         1},
     {"getSBMLReactionsList",       (DL_FUNC) &getSBMLReactionsList,       1},
-    {"exportSBML",                 (DL_FUNC) &exportSBML,                 34},
+    {"exportSBML",                 (DL_FUNC) &exportSBML,                 35},
     {"getSBMLFbcversion",          (DL_FUNC) &getSBMLFbcversion,          1},
     {"isAvailableFbcPlugin",       (DL_FUNC) &isAvailableFbcPlugin,       0},
     {"isAvailableGroupsPlugin",    (DL_FUNC) &isAvailableGroupsPlugin,    0},
